[gd_scene load_steps=3 format=3 uid="uid://bawwtsllensfb"]

[ext_resource type="PackedScene" uid="uid://cllbeo3705r6b" path="res://scenes/player_detection.tscn" id="1_c80lh"]
[ext_resource type="Script" path="res://scripts/hazard_area.gd" id="2_ogqc4"]

[node name="HazardArea" instance=ExtResource("1_c80lh")]
script = ExtResource("2_ogqc4")

[node name="DamageTimer" type="Timer" parent="." index="1"]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
